@@ -171,10 +171,7 @@ class AddressRuleContainer extends ObjRuleContainer
 
     public function setAny()
     {
-        foreach( $this->o as $o )
-        {
-            $this->remove($o, false, true);
-        }
+        $this->removeAll();
 
         $this->rewriteXML();
     }
